--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,6 @@
 <!doctype html>
-<title>Python Flask Image Upload and Display Example</title>
-<h2>Select an image to upload and display</h2>
+<title>Python Flask Display Example CF</title>
+<h2>Select an shape file(kml) to upload and display</h2>
 <p>
 	{% with messages = get_flashed_messages() %}
 	  {% if messages %}
