--- a/templates/stats.html
+++ b/templates/stats.html
@@ -8,7 +8,7 @@ Below is the NDVI for the following shape file.
 </p>
 
 <div>
-<img src="static/uploads/sample.jpg" width="600" height="600" alt="Image not Found or shape file not loaded.">
+<img src="static/uploads/resample.jpg" width="600" height="600" alt="Image not Found or shape file not loaded.">
 </div>
 
 {% endblock content %}
