--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h2>{% block title %}Select an shape file(kml) to upload and display {% endblock %}</h2>
+<h2>{% block title %}Select an shape file(upload as a zipped folder) to upload and display {% endblock %}</h2>
 
 <p>
 	{% with messages = get_flashed_messages() %}
