added altair plot rendering

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
             <li class="nav-item">
             <a class="nav-link" href="{{ url_for('get_map')}}" style="color: white">MapPage</a>
             </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('stats_render')}}" style="color: white">StatsPage</a>
+            </li>
             </ul>
         </div>
     </nav>
