--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,9 @@
             <li class="nav-item">
             <a class="nav-link" href="{{ url_for('get_map')}}" style="color: white">MapPage</a>
             </li>
+            <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('stats_render')}}" style="color: white">StatsPage</a>
+            </li>
             </ul>
         </div>
     </nav>
@@ -35,11 +38,6 @@
 	<header>{% block head %}{% endblock %}</header>
     </div>
 
-	<h2>Climate Farmers Stats page </h2>
-
-	<p>
-	Below is a map for the following shape file.
-	</p>
 
 	{% block body %}{% endblock %}
 	
