--- a/templates/upload.html
+++ b/templates/upload.html
@@ -26,6 +26,14 @@
 		<p>
 			<input type="file" name="file" autocomplete="off" required>
 		</p>
+		<p>
+			<label for="latitude">Enter estimate midpoint Latitude for Shape file:</label><br>
+  			<input type="text" id="latitude" name="latitude"><br>
+		</p>
+		<p>
+			<label for="longitude">Enter estimate midpoint Longitude for Shape file:</label><br>
+  			<input type="text" id="longitude" name="longitude"><br>
+		</p>
     </dl>
     <p>
 		<input type="submit" value="Submit">
