--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="{{ url_for('upload_form')}}" style="color: white">Upload</a>
+                <a class="nav-link" href="{{ url_for('upload_image')}}" style="color: white">Upload</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="{{ url_for('get_map')}}" style="color: white">MapPage</a>
